fix buttons on mobile

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -578,7 +578,7 @@ body {
       }
     }
     &__slider-item {
-      margin-bottom: 59px;
+      margin-bottom: 29px;
     }
     &__slider-item-title {
       font-size: 14px;
